Clean-up edition
I am adding the code for the three cleanup steps. Also adding the file with Tech Zip codes and the SIC code file I used to create the dictionary.
Maria

--- a/ds4a_team128_eda.ipynb
+++ b/ds4a_team128_eda.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: Invalid requirement: '-'\u001b[0m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#use this command to install the required packages \n",
     "!pip install -r requirements.txt "
@@ -20,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1min 39s, sys: 2min 23s, total: 4min 2s\n",
-      "Wall time: 6min 14s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time \n",
     "#here is the link to the file in Google Drive\n",
@@ -52,10 +35,10 @@
     "url_raw = 'https://drive.google.com/file/d/13vj4YxKRs1Tw1VPGhTefBxxKQuC5pRd_/view?usp=sharing'\n",
     "url_raw_mn = 'https://drive.google.com/file/d/1YRh58UiKWNtxfvYa0IzFF3oYL42iBs7d/view?usp=sharing'\n",
     "\n",
-    "req = requests.get(url_raw)\n",
-    "url_content = req.content\n",
-    "with open('test_data.csv',) as file:\n",
-    "    df=pd.read_csv(file,delimiter=',')\n",
+    "# req = requests.get(url_raw)\n",
+    "# url_content = req.content\n",
+    "# with open('test_data.csv',) as file:\n",
+    "#     df=pd.read_csv(file,delimiter=',')\n",
     "\n",
     "req_mn = requests.get(url_raw_mn)\n",
     "url_content_mn = req_mn.content\n",
@@ -65,163 +48,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   vb_voterbase_id vb_voterbase_household_id vb_tsmart_exact_address_track  \\\n",
-      "0  AK-000000000020      Y000000186098323KYLE              Y000000186098323   \n",
-      "1  AK-000000000250    Y000000182911889OSWALD              Y000000182911889   \n",
-      "2  AK-000000000509    Y000000235819126HOLMES              Y000000235819126   \n",
-      "3  AK-000000000711     Y000000140159129SCOTT              Y000000140159129   \n",
-      "4  AK-000000001144    Y000000084251981LARSEN              Y000000084251981   \n",
-      "\n",
-      "   vb_tsmart_latitude  vb_tsmart_longitude  vb_tsmart_zip vb_tsmart_state  \\\n",
-      "0           61.095810          -149.828888          99516              AK   \n",
-      "1           61.184738          -149.751389          99504              AK   \n",
-      "2           48.383949          -115.551353          59923              MT   \n",
-      "3           61.319233          -149.532120          99577              AK   \n",
-      "4           61.423569          -149.480682          99567              AK   \n",
-      "\n",
-      "  vb_tsmart_level      vb_tsmart_county_name  vb_tsmart_county_code  ...  \\\n",
-      "0          Street  MUNICIPALITY OF ANCHORAGE                   20.0  ...   \n",
-      "1          Street  MUNICIPALITY OF ANCHORAGE                   20.0  ...   \n",
-      "2          Street                    LINCOLN                   53.0  ...   \n",
-      "3          Street  MUNICIPALITY OF ANCHORAGE                   20.0  ...   \n",
-      "4          Street  MUNICIPALITY OF ANCHORAGE                   20.0  ...   \n",
-      "\n",
-      "  vb_business_revenue_range tb_business_owner_flg tb_boah_flg  \\\n",
-      "0                       NaN                   NaN         NaN   \n",
-      "1                         A                   1.0         1.0   \n",
-      "2                       NaN                   NaN         NaN   \n",
-      "3                         A                   NaN         1.0   \n",
-      "4                       NaN                   NaN         NaN   \n",
-      "\n",
-      "  tb_boah_biz_size_cd  tb_boah_biz_source_cd  tb_boah_biz_rank_cd  \\\n",
-      "0                 NaN                    NaN                  NaN   \n",
-      "1                   B                      E                  1.0   \n",
-      "2                 NaN                    NaN                  NaN   \n",
-      "3                   B                      E                  NaN   \n",
-      "4                 NaN                    NaN                  NaN   \n",
-      "\n",
-      "   tb_boah_biz_func_cd  tb_boah_biz_revenue_cd  tb_boah_biz_sic_cd  \\\n",
-      "0                  NaN                     NaN                 NaN   \n",
-      "1                    D                       A              8748.0   \n",
-      "2                  NaN                     NaN                 NaN   \n",
-      "3                  NaN                       A                 1.0   \n",
-      "4                  NaN                     NaN                 NaN   \n",
-      "\n",
-      "   tb_boah_biz_sic_2_cd  \n",
-      "0                   NaN  \n",
-      "1                  87.0  \n",
-      "2                   NaN  \n",
-      "3                   0.0  \n",
-      "4                   NaN  \n",
-      "\n",
-      "[5 rows x 41 columns]\n",
-      "(16819676, 41)\n",
-      "  vb_voterbase_id    vb_voterbase_household_id vb_tsmart_exact_address_track  \\\n",
-      "0       AK-808785        Y000000222536613MELIN              Y000000222536613   \n",
-      "1       AK-904841  Y000000199347266CHRISTENSEN              Y000000199347266   \n",
-      "2      AL-2587848        Y000000088555483WENDT              Y000000088555483   \n",
-      "3      AL-2825669        Y000000144487643WEISS              Y000000144487643   \n",
-      "4       AL-298903        Y000000222254014HOUSE              Y000000222254014   \n",
-      "\n",
-      "   vb_tsmart_latitude  vb_tsmart_longitude  vb_tsmart_zip vb_tsmart_state  \\\n",
-      "0           45.093441           -93.366325          55428              MN   \n",
-      "1           45.098728           -92.849533          55082              MN   \n",
-      "2           43.692547           -92.384865          55975              MN   \n",
-      "3           44.075367           -92.545364          55901              MN   \n",
-      "4           44.874409           -93.275841          55423              MN   \n",
-      "\n",
-      "  vb_tsmart_level vb_tsmart_county_name  vb_tsmart_county_code  ...  \\\n",
-      "0          Street              HENNEPIN                   53.0  ...   \n",
-      "1          Street            WASHINGTON                  163.0  ...   \n",
-      "2          Street              FILLMORE                   45.0  ...   \n",
-      "3          Street               OLMSTED                  109.0  ...   \n",
-      "4          Street              HENNEPIN                   53.0  ...   \n",
-      "\n",
-      "  vb_business_revenue_range tb_business_owner_flg tb_boah_flg  \\\n",
-      "0                       NaN                   NaN         NaN   \n",
-      "1                       NaN                   NaN         NaN   \n",
-      "2                       NaN                   NaN         NaN   \n",
-      "3                       NaN                   1.0         NaN   \n",
-      "4                       NaN                   NaN         NaN   \n",
-      "\n",
-      "  tb_boah_biz_size_cd  tb_boah_biz_source_cd  tb_boah_biz_rank_cd  \\\n",
-      "0                 NaN                    NaN                  NaN   \n",
-      "1                 NaN                    NaN                  NaN   \n",
-      "2                 NaN                    NaN                  NaN   \n",
-      "3                 NaN                    NaN                  NaN   \n",
-      "4                 NaN                    NaN                  NaN   \n",
-      "\n",
-      "   tb_boah_biz_func_cd  tb_boah_biz_revenue_cd  tb_boah_biz_sic_cd  \\\n",
-      "0                  NaN                     NaN                 NaN   \n",
-      "1                  NaN                     NaN                 NaN   \n",
-      "2                  NaN                     NaN                 NaN   \n",
-      "3                  NaN                     NaN                 NaN   \n",
-      "4                  NaN                     NaN                 NaN   \n",
-      "\n",
-      "   tb_boah_biz_sic_2_cd  \n",
-      "0                   NaN  \n",
-      "1                   NaN  \n",
-      "2                   NaN  \n",
-      "3                   NaN  \n",
-      "4                   NaN  \n",
-      "\n",
-      "[5 rows x 41 columns]\n",
-      "(423530, 41)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#look at the properties of the two datasets \n",
-    "print(df.head())\n",
-    "print(df.shape)\n",
+    "# print(df.head())\n",
+    "# print(df.shape)\n",
     "\n",
     "\n",
-    "# print(df_mn.head())\n",
-    "# print(df_mn.shape)"
+    "print(df_mn.head())\n",
+    "#print(df_mn.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['vb_voterbase_id', 'vb_voterbase_household_id',\n",
-       "       'vb_tsmart_exact_address_track', 'vb_tsmart_latitude',\n",
-       "       'vb_tsmart_longitude', 'vb_tsmart_zip', 'vb_tsmart_state',\n",
-       "       'vb_tsmart_level', 'vb_tsmart_county_name', 'vb_tsmart_county_code',\n",
-       "       'add_type', 'tsmart_geo_confidence', 'vb_voterbase_gender',\n",
-       "       'vb_voterbase_race', 'vb_education', 'tb_education_cd',\n",
-       "       'tb_college_age_flg', 'tb_starting_out_flg', 'tb_career_bldr_flg',\n",
-       "       'tb_prime_earner_flg', 'tb_retiree_flg', 'vb_occupation',\n",
-       "       'tb_occupation_cd', 'xpg_ind_lvl_occupation_code',\n",
-       "       'xpg_ind_lvl_occupation_group', 'hh_income', 'tb_income_range_prem_cd',\n",
-       "       'xpg_ind_lvl_business_owner', 'vb_business_owner_indicator',\n",
-       "       'vb_business_size_code', 'vb_business_type',\n",
-       "       'vb_business_revenue_range', 'tb_business_owner_flg', 'tb_boah_flg',\n",
-       "       'tb_boah_biz_size_cd', 'tb_boah_biz_source_cd', 'tb_boah_biz_rank_cd',\n",
-       "       'tb_boah_biz_func_cd', 'tb_boah_biz_revenue_cd', 'tb_boah_biz_sic_cd',\n",
-       "       'tb_boah_biz_sic_2_cd'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.columns"
+    "df_mn.columns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data cleaning for Human Capital Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First Goal: Create a column that identifies whether or not someone works in tech based upon a) their occupation status and/or b) working for/owning a company with a SIC code in the technology sector (i.e., any org with a code in the office of technology) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data cleaning for test mn data, but can be motified for larger dataset (do not want to crash my laptop while testing)\n",
+    "##Need to create a binary column that identifies if someone is in tech\n",
+    "df_mn.groupby('vb_occupation')['vb_occupation'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mn['vb_occupation'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mn.groupby('tb_boah_biz_sic_cd')['tb_boah_biz_sic_cd'].count()\n",
+    "#834 different codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mn['tb_boah_biz_sic_cd'].astype(int, errors = 'ignore').astype(str).split('.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mn.groupby('tb_boah_biz_sic_2_cd')['tb_boah_biz_sic_2_cd'].count()\n",
+    "#89 different codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load in file with SIC codes\n",
+    "sic_codes=pd.read_excel('SIC_Codes_5.31.2021.xlsx')\n",
+    "sic_codes.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#make a dictionary (First attempt)\n",
+    "sic_dict=sic_codes.to_dict('records')\n",
+    "sic_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# antoher type of dictionary that may be easier to manuver\n",
+    "sic_dict2=sic_codes.set_index('SIC Code').to_dict()['Office']\n",
+    "sic_dict2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#in the dataframe SIC Code is #.0 so the column needs to be clean\n",
+    "list_SIC_occ=[]\n",
+    "for occ_val in df_mn['tb_boah_biz_sic_cd']:\n",
+    "    clean_val=str(occ_val).split('.')[0]\n",
+    "    list_SIC_occ.append(clean_val)\n",
+    "    \n",
+    "# add column with values\n",
+    "\n",
+    "df_mn['SIC_code']=df_mn['tb_boah_biz_sic_cd'].map(sic_dict2)\n",
+    "df_mn.head()\n",
+    "df_mn['SIC_code'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dictionary for occupation\n",
+    "occ_codes=target_smart['Field']=='vb.occupation'\n",
+    "occ_df=target_smart[occ_codes]\n",
+    "occ_df.drop(occ_df.index[[0]],inplace=True)\n",
+    "occ_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "occ_dict=occ_df.set_index('Field Value').to_dict()['Value Description']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mn['Occupation']=df_mn['vb.occupation'].map(occ_dict)\n",
+    "df_mn['Occupation'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Second Goal: Create a column with a binary code for “tech_hub_zip9” that identifies all zip codes that are associated with the current tech hubs: New York, Boston, Seattle, San Francisco, and San Jose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tech_zip=pd.read_excel('Tech_ZipCodes.xlsx')\n",
+    "tech_zipl=tech_zip['Zip Code'].to_list()\n",
+    "\n",
+    "tech_zipl\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_bin=[]\n",
+    "tech_ziplist=[55428,55975] # this is a test list, but once we finalize a zip code list we can\n",
+    "for zip_code in df_mn['vb_tsmart_zip']:\n",
+    "    if zip_code in tech_ziplist:\n",
+    "        zip_code=1\n",
+    "        zip_bin.append(zip_code)\n",
+    "    else:\n",
+    "        zip_code=0\n",
+    "        zip_bin.append(zip_code)\n",
+    "        \n",
+    "zip_bin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create new column with this\n",
+    "df_mn['tech_hub_zip9']=zip_bin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Third Goal: Review coding for education, gender, and race to make sure ACS coding maps to coding in Targetsmart data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#uncode the education;gender;race columns with targetsmart data \n",
+    "#1. load targetsmart data\n",
+    "target_smart=pd.read_excel('targetsmart_data_dictionary_q2_2021.xlsx',sheet_name='Copy of Raw TargetSmart Field V')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mn.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mn.columns\n",
+    "target_smart.columns=target_smart.iloc[1]\n",
+    "target_smart.drop(target_smart.index[[0,1]],inplace=True)\n",
+    "target_smart.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2 dictionary for race\n",
+    "race_codes=target_smart['Field']=='vb.voterbase_race'\n",
+    "race_df=target_smart[race_codes]\n",
+    "race_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3 dictionary for gender\n",
+    "gender_codes=target_smart['Field']=='vb.voterbase_gender'\n",
+    "gender_df=target_smart[gender_codes]\n",
+    "gender_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4 dictionary for education\n",
+    "edu_codes=target_smart['Field']=='vb.education'\n",
+    "edu_df=target_smart[edu_codes]\n",
+    "edu_df.drop(edu_df.index[[0]],inplace=True)\n",
+    "edu_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#edu dictionary\n",
+    "edu_dict=edu_df.set_index('Field Value').to_dict()['Value Description']\n",
+    "edu_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#created a categorical column for education\n",
+    "df_mn['Education']=df_mn['vb_education'].map(edu_dict)\n",
+    "df_mn.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "END of First Data Clean Up 6.6.2021"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -240,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
